--- a/package.json
+++ b/package.json
@@ -9,15 +9,17 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^14.0.0",
     "@reduxjs/toolkit": "^2.2.2",
     "axios": "^1.6.8",
     "expo": "~50.0.11",
     "expo-checkbox": "~2.7.0",
     "expo-status-bar": "~1.11.1",
+    "latest": "^0.2.0",
     "react": "18.2.0",
     "react-native": "0.73.4",
     "react-redux": "^9.1.0",
-    "redux": "^4.0.5",
+    "redux": "^5.0.1",
     "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
